examples/test/testpolicy14340.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14340
  namespace: namespace216
spec:
  podSelector:
    matchLabels:
      key28: value41
      key17: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value38
          key18: value17
      podSelector:
        matchLabels:
          key46: value5
          key24: value45
          key36: value3
